# fast-api-demo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  test_async_database.py  test_database.py
.serena/: project.yml
app/: database.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py  users.py
app/core/: config.py  exceptions.py  security.py
app/crud/: __init__.py  item.py  user.py
app/models/: item.py  user.py
app/schemas/: item.py  response.py  user.py
